css/main.css
/* Font-Face */

@font-face {
    font-family: 'Lato';
    font-weight: 400;
    src: url('../fonts/Lato/Lato-Regular.ttf');
}

@font-face {
    font-family: 'Lato';
    font-weight: 700;
    src: url('../fonts/Lato/Lato-Bold.ttf');
}

@font-face {
    font-family: 'Eurofurence';
    font-weight: 300;
    src: url('../fonts/Eurofurence/eurof35.ttf');
}

@font-face {
    font-family: 'Eurofurence';
    font-weight: 500;
    src: url('../fonts/Eurofurence/eurof55.ttf');
}

* {
    box-sizing: border-box;
    /* outline: 1px solid hotpink; */
}

html {
    margin: 0;
    padding: 0;
    font-family: 'Lato', 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
}

body {
    min-height: 100vh;
    margin: 0;
    padding: 0;
}

a {
    text-decoration: none;
    color: black;
}

.container {
    max-width: 980px;
    margin: 0 auto;
    padding-right: 20px;
    padding-left: 20px;
}

/* --- Header --- */

header {
    position: sticky;
    top: 0;
    padding: 5px;
    letter-spacing: 0.8px;
    background-color: #292929;
    box-shadow: inset 0 -6px 0 #1e1e1e;
    z-index: 100;
}

header .logo {
    font-family: 'Eurofurence', 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
    font-size: 40px;
    color: white;
    letter-spacing: -0.8px;
    text-transform: capitalize;
    z-index: 100;
}

.logo {
    font-family: 'Eurofurence', 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
    font-size: 40px;
    letter-spacing: -0.8px;
    text-transform: capitalize;
}

.logo::after {
    content: '.';
    color: #58c93a;
}

header .btn-toggle-menu {
    display: block;
    cursor: pointer;
    color: white;
    z-index: 100;
}

header ul.main-menu {
    width: 100%;
    position: absolute;
    top: 55px;
    left: 0;
    background: #292929;
    transform: translate(0, -150%);
    transition: all 0.3s ease-in-out;
    z-index: 50;
}

header ul.main-menu.open {
    transform: translate(0, 0);
}

header ul.main-menu li {
    margin: 0 0 10px 0;
}

header ul.main-menu a {
    display: block;
    padding: 5px 0 10px 0;
    text-align: center;
    text-decoration: none;
    color: white;
    text-transform: capitalize;
    transition: all 0.3s ease-in-out;
}

header ul.main-menu a:hover,
header .dropdown:hover .dropdown-link {
    color: #58c93a;
    box-shadow: inset 0 -6px 0 #58c93a;
}

header ul.main-menu .dropdown-list {
    display: none;
    background: #1e1e1e;
}
header ul.main-menu .dropdown-list li {
    line-height: 35px;
}
.dropdown-list.open-dropdown {
    display: block !important;
}

@media (min-width: 780px) {
    header {
        position: static;
        height: 130px;
        padding: 0;
    }
    header .btn-toggle-menu {
        display: none;
    }
    header ul.main-menu {
        width: auto;
        display: flex;
        position: static;
        align-items: center;
        background: transparent;
        transform: translate(0, 0);
    }
    header ul.main-menu li {
        width: 130px;
        margin: 0;
        line-height: 130px;
        border-left: 1px solid #1e1e1e;
    }
    header ul.main-menu li:last-child {
        border-right: 1px solid #1e1e1e;
    }
    header ul.main-menu a {
        padding: 0;
    }
    header ul.main-menu .dropdown:hover .dropdown-list {
        display: block;
        position: absolute;
    }
    header ul.main-menu .dropdown-list li {
        line-height: 60px;
    }
}

/* --- Main --- */

main {
    padding-top: 85px;
    border-left: 1px solid #e1e0e0;
    border-right: 1px solid #e1e0e0;
    flex: 1 0 auto;
}

ul.posts-list .post-item {
    cursor: pointer;
    flex-direction: column;
    margin: 0 0 25px 0;
    padding: 5px;
    box-shadow: 0 3px 6px rgba(0, 0, 0, 0.2), 0 3px 10px rgba(0, 0, 0, 0.19);
}

ul.posts-list .post-image,
ul.posts-list .post-body {
    width: 100%;
    padding: 0 0 5px 0;
}

ul.posts-list h3 {
    margin: 0;
    padding: 0;
}

ul.posts-list .post-title {
    font-size: 28px;
    font-weight: 700;
    line-height: 35px;
    letter-spacing: 0.84px;
    color: #4f4e4e;
    text-transform: uppercase;
    transition: all 0.3s ease-in-out;
}

ul.posts-list .post-title:hover,
ul.posts-list.post-item:hover .post-title {
    color: #58c93a;
}

ul.posts-list .post-text {
    font-size: 16px;
    font-weight: 400;
    line-height: 20px;
    letter-spacing: 0.5px;
    color: #606060;
}

ul.posts-list .post-body button {
    display: none;
}

.post-image img {
    display: block;
    width: 100%;
    height: auto;
}

@media (min-width: 780px) {
    ul.posts-list .post-item {
        flex-direction: row;
        margin: 0 0 85px 0;
        box-shadow: none;
    }
    ul.posts-list .post-image {
        width: 50%;
    }
    ul.posts-list .post-body {
        padding: 0 0 0 10px;
        width: 50%;
    }
    ul.posts-list .post-body button {
        cursor: pointer;
        display: block;
        width: 185px;
        height: 40px;
        padding: 0 20px;
        text-align: center;
        font-weight: 700;
        line-height: 20px;
        color: #c2c2c2;
        text-transform: capitalize;
        border: 1px solid #c2c2c2;
        border-radius: 25px;
        background: transparent;
        transition: all 0.3s ease-in-out;
    }
    ul.posts-list .post-body button:hover {
        width: 210px;
        text-align: left;
        color: #58c93a;
        border: 1px solid #58c93a;
    }
    ul.posts-list .post-body button:hover .spn-arrow:after {
        content: ' →';
    }
}

main nav.nav-pages {
    align-items: center;
    height: 75px;
    margin: 0 -20px;
    font-size: 18px;
    font-weight: 700;
    letter-spacing: 0.9px;
    border-top: 1px solid #e1e0e0;
    text-transform: uppercase;
}

main nav.nav-pages a {
    display: flex;
    height: 100%;
    padding: 30px;
    color: #818181;
    transition: all 0.3s ease-in-out;
}

main nav.nav-pages a:hover {
    color: #58c93a;
}

/* --- Footer --- */

footer {
    padding: 80px 0;
    text-align: center;
    background-color: #f8f8f8;
    border-top: 1px solid #e1e0e0;
}

footer div.links {
    margin: 35px 0;
    font-size: 13px;
    font-weight: 400;
    color: #a6a6a6;
    letter-spacing: 0.39px;
}

footer div.links a {
    color: #a6a6a6;
    transition: all 0.3s ease-in-out;
}

footer div.links a:hover {
    color: #58c93a;
}

footer ul.social-list li {
    display: inline-block;
    width: 40px;
    height: 40px;
    margin: 20px;
    background: #e5e5e5;
    transition: all 0.3s ease-in-out;
}

footer ul.social-list a {
    height: 100%;
}

footer ul.social-list img {
    display: block;
    width: 20px;
    margin: auto;
    height: auto;
}

footer li.facebook:hover {
    background: #3b5998;
}

footer li.twitter:hover {
    background: #1da1f2;
}

footer li.behance:hover {
    background: #f67280;
}

footer li.basketball:hover {
    background: #6c5b7b;
}

/* Modal */

/* The Modal (background) */

.modal {
    display: none;
    /* Hidden by default */
    position: fixed;
    /* Stay in place */
    z-index: 1000;
    /* Sit on top */
    padding-top: 100px;
    /* Location of the box */
    left: 0;
    top: 0;
    width: 100%;
    /* Full width */
    height: 100%;
    /* Full height */
    overflow: auto;
    /* Enable scroll if needed */
    background-color: rgb(0, 0, 0);
    /* Fallback color */
    background-color: rgba(0, 0, 0, 0.4);
    /* Black w/ opacity */
}

/* Modal Content */

.modal-content {
    position: relative;
    background-color: #fefefe;
    margin: auto;
    padding: 0;
    border: 1px solid #888;
    width: 95%;
    box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
    animation-name: animatetop;
    animation-duration: 0.4s;
    animation-timing-function: cubic-bezier(0, -0.26, 0, 1.63);
}

.modal h2 {
    margin: 0 30px 0 0;
    padding: 0;
}

.modal-header {
    padding: 10px;
    color: #4f4e4e;
    border-bottom: 1px solid #4f4e4e;
    text-transform: uppercase;
}

/* The Close Button */

.close {
    position: absolute;
    top: 0;
    right: 12px;
    font-size: 40px;
    color: #4f4e4e;
    transition: all 0.3s ease-in-out;
}

.close:hover,
.close:focus {
    cursor: pointer;
    text-decoration: none;
    color: #5cb85c;
}

.modal-body {
    text-align: center;
    padding: 50px 10px;
    color: #4f4e4e;
}

.modal-footer {
    text-align: right;
    padding: 5px 10px;
    color: #4f4e4e;
}

/* Add Animation */

@keyframes animatetop {
    from {
        top: -300px;
        opacity: 0
    }
    to {
        top: 0;
        opacity: 1
    }
}

.btn {
    cursor: pointer;
    margin: 5px;
    padding: 5px 15px;
    font-size: 20px;
    font-weight: 300;
    color: #4f4e4e;
    border: 1px solid #4f4e4e;
    background: white;
    transition: all 0.3s ease-in-out;
}

.btn:hover {
    color: white;
    border: 1px solid white;
    background: #4f4e4e;
}

input[type="email"] {
    min-width: 300px;
    padding: 0 5px;
    border: none;
    border-bottom: 1px solid #4f4e4e;
    background: transparent;
    line-height: 35px;
    background: white;
    font-size: 24px;
    background: url('../img/send-button.svg');
    background-size: 25px;
    background-repeat: no-repeat;
    background-position: right center;
}

input[type="email"]:focus {
    outline: none;
    border-color: #58c93a;
}

@media (min-width: 780px) {
    .modal-content {
        width: 80%;
    }
    .modal h2 {
        margin: 0;
    }
}

/* --- Helpers --- */

.bold {
    font-weight: 700;
}

.lowercase {
    text-transform: lowercase;
}

/* lists */

.clean-list {
    list-style-type: none;
    margin: 0;
    padding: 0;
}

/* flex */

.flex {
    display: flex;
}

.column {
    flex-direction: column;
}

.justify-content-center {
    justify-content: center;
}

.space-between {
    justify-content: space-between;
}

.space-evenly {
    justify-content: space-evenly;
}

.align-items-center {
    align-items: center;
}

.hamburger-inner,
.hamburger-inner::before,
.hamburger-inner::after {
    background-color: #58c93a;
}

